fix couchdb encoded password config incorrect, comment out unneeded port mappings

--- a/server/config/nginx/nginx.conf.template
+++ b/server/config/nginx/nginx.conf.template
@@ -45,7 +45,7 @@
 
 map $request_method $auth_header {
     default $http_authorization;
-    PUT "Basic ${COUCHDB_ADMIN_PASSWORD_ENC}";
+    PUT "Basic ${COUCHDB_PASSWORD_ENC}";
 }
 
 server {
