--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,20 +5,27 @@ services:
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=${COUCHDB_ADMIN_PASSWORD:-couchdb}
-      - COUCHDB_PASSWORD_ENC=${COUCHDB_ADMIN_PASSWORD_ENC:-YWRtaW46Y291Y2hkYg==}
-    ports:
-      - '5984:5984'
-      - '4369:4369'
-      - '9100:9100'
+
+# Ports to be opened if you wish to directly expose CouchDB.
+# This should only be necessary for debugging / development
+#
+#    ports:
+#      - '5984:5984'
+#      - '4369:4369'
+#      - '9100:9100'
     volumes:
       - couchdb_data:/opt/couchdb/data
       - ./config/pouchdb:/opt/couchdb/etc/local.d
 
   http:
       image: "nginx:1.25"
+      
+      environment:
+          - COUCHDB_PASSWORD_ENC=${COUCHDB_ADMIN_PASSWORD_ENC:-YWRtaW46Y291Y2hkYg==}
    
       ports:
         - "${SERVICE_PORT:-5288}:80"
+
       volumes:
         - ./config/nginx:/etc/nginx/templates
         - ./config/nginx:/etc/nginx/auth
