put our couchdb config into docker.ini as that is the default config file

--- a/server/config/pouchdb/docker.ini
+++ b/server/config/pouchdb/docker.ini
@@ -1,6 +1,19 @@
+[log]
+level = debug
+
+[chttpd]
+enable_cors = true
+require_valid_user_except_for_up = true
+
+[cors]
+origins = http://localhost:5173
+credentials = true
+
 
 [admins]
-admin = -pbkdf2-b949ea6a29c62bbcb3e9851e9017bc1d56ad5553,9b8c4b1e8451cf866c679e2a987aff2e,10
+admin = -pbkdf2-2f221c70b0ba0d59b5e671bff38f2356e68325cd,0adb3d613418886604c96cac5878db70,10
 
-[chttpd_auth]
-secret = 0a09edc7d394843198764947c2ffa0c4
+[couchdb]
+single_node=true
+uuid = 6d057d34277b409fdd27f23e6ed6527f
+default_security = everyone
