--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "A library to enable cross-application real-time collaborative tagging and notes",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "type" : "module",
+  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "dependencies": {
+    "@babel/traverse": "^7.23.2",
+    "json5": "^2.2.2",
     "node-gyp": "^10.0.1",
     "pouchdb": "^7.3.0",
+    "semver": "^6.3.1",
+    "tough-cookie": "^4.1.3",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
